# TestPrj_v01

./: CMakeLists.txt  test_calc_v1.sln  test_calc_v1.vcxproj  test_calc_v1.vcxproj.filters
src/: main.cpp  simplecalc.cpp
test_calc_v1/x64/Debug/: test_calc_v1.exe.recipe  test_calc_v1.ilk  vc143.idb
test_calc_v1/x64/Debug/test_calc_v1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_calc_v1.lastbuildstate
tests/: test_add01.cpp  test_add02.cpp
